--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
-			<div style="background-image:url(/pages/1.jpg)"></div>
-			<div style="background-image:url(/pages/2.jpg)"></div>
-			<div style="background-image:url(/pages/3.jpg)"></div>
-			<div style="background-image:url(/pages/4.jpg)"></div>
-			<div style="background-image:url(/pages/5.jpg)"></div>
-			<div style="background-image:url(/pages/6.jpg)"></div>
-			<div style="background-image:url(/pages/7.jpg)"></div>
-			<div style="background-image:url(/pages/8.jpg)"></div>
-			<div style="background-image:url(/pages/9.jpg)"></div>
-			<div style="background-image:url(/pages/10.jpg)"></div>
-			<div style="background-image:url(/pages/11.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/1.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/2.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/3.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/4.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/5.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/6.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/7.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/8.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/9.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/10.jpg)"></div>
+			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/11.jpg)"></div>
 		</div>
 	</div>
 </div>
