--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta name="viewport" content="width = 1050, user-scalable = no" />
-<script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="../../extras/modernizr.2.5.3.min.js"></script>
+<script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
+<script type="text/javascript" src="extras/modernizr.2.5.3.min.js"></script>
 </head>
 <body>
 	<h1>OLA, TUDO OK</h1>
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/1.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/2.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/3.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/4.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/5.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/6.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/7.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/8.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/9.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/10.jpg)"></div>
-			<div style="background-image:url(https://pauloaugusto1.github.io/lgpdprototipo.github.io/pages/11.jpg)"></div>
+			<div style="background-image:url(pages/1.jpg)"></div>
+			<div style="background-image:url(pages/2.jpg)"></div>
+			<div style="background-image:url(pages/3.jpg)"></div>
+			<div style="background-image:url(pages/4.jpg)"></div>
+			<div style="background-image:url(pages/5.jpg)"></div>
+			<div style="background-image:url(pages/6.jpg)"></div>
+			<div style="background-image:url(pages/7.jpg)"></div>
+			<div style="background-image:url(pages/8.jpg)"></div>
+			<div style="background-image:url(pages/9.jpg)"></div>
+			<div style="background-image:url(pages/10.jpg)"></div>
+			<div style="background-image:url(pages/11.jpg)"></div>
 		</div>
 	</div>
 </div>
@@ -64,8 +64,8 @@ function loadApp() {
 
 yepnope({
 	test : Modernizr.csstransforms,
-	yep: ['../../lib/turn.js'],
-	nope: ['../../lib/turn.html4.min.js'],
+	yep: ['lib/turn.js'],
+	nope: ['lib/turn.html4.min.js'],
 	both: ['css/basic.css'],
 	complete: loadApp
 });
