--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="extras/modernizr.2.5.3.min.js"></script>
 </head>
-<body>
+<body style="background-color:black;">
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
